<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/mToolBar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_white_solid_5dp_coner"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="24dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="原登录密码"
            android:textSize="12sp" />

        <EditText

            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_gray_solid_5dp_coner"
            android:paddingLeft="8dp"
            android:maxLength="18"
            android:inputType="textPassword"
            android:hint="@string/input_old_pwd"
            android:textColor="@color/blue"
            android:textColorHint="@color/hintTextColor"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="新密码"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_gray_solid_5dp_coner"
            android:hint="@string/mine_6_18_password"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:maxLength="18"
            android:textColor="@color/blue"
            android:textColorHint="@color/hintTextColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="再次确认"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_gray_solid_5dp_coner"
            android:hint="@string/mine_plz_input_password_again"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:maxLength="18"
            android:textColor="@color/blue"
            android:textColorHint="@color/hintTextColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tv_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/bg_blue_solid_5dp_coner"
            android:text="@string/confirm"
            android:textColor="@color/color_white" />
    </LinearLayout>


</LinearLayout>