<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white_solid_5dp_coner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mTvCheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18sp"
        android:text="@string/safe_check"
        android:textSize="15sp"
        android:textColor="@color/commonTextColor"
        />



    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/check_input_hig"-->
    <!--android:layout_marginLeft="@dimen/margin_14"-->
    <!--android:layout_marginRight="@dimen/margin_14"-->
    <!--android:layout_marginTop="@dimen/margin_14"-->
    <!--android:background="@drawable/check_input_bg"-->
    <!--&gt;-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mEtCheck"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@drawable/bg_gray_solid_5dp_coner"
        android:hint="@string/input_deal_password"
        android:textColorHint="#B3BED9"
        android:textSize="12sp"
        android:paddingLeft="@dimen/margin_14"
        android:layout_marginLeft="@dimen/margin_14"
        android:layout_marginRight="@dimen/margin_14"
        android:layout_centerVertical="true"
        android:textColor="@color/commonTextColor"
        android:inputType="textPassword"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/mTvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="找回密码?"
        android:textSize="10dp"
        android:paddingRight="14dp"
        android:textColor="@color/redF4"
        />
    <!--</RelativeLayout>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/part_line_color"
        android:layout_marginTop="@dimen/margin_14"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/mTvCheckCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#9A66FF"
            android:background="@drawable/default_ripple"
            />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/part_line_color"
            />
        <TextView
            android:id="@+id/mTvCheckConfirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#9A66FF"
            android:background="@drawable/default_ripple"
            />


    </LinearLayout>

</LinearLayout>