<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg">

    <include
        android:id="@+id/mToolBar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/space_dimen"
        android:padding="@dimen/space_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="原登录密码"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <EditText

            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_dimen"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_gray_solid_5dp_coner"
            android:paddingLeft="@dimen/dp_10"
            android:maxLength="18"
            android:inputType="textPassword"
            android:hint="@string/input_old_pwd"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_dimen"
            android:text="新密码"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_dimen"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_gray_solid_5dp_coner"
            android:hint="@string/mine_6_18_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:maxLength="18"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_dimen"
            android:text="再次确认"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_dimen"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_gray_solid_5dp_coner"
            android:hint="@string/mine_plz_input_password_again"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:maxLength="18"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/tv_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_dimen"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/bg_main_solid_5dp_coner"
            android:text="@string/confirm"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_white" />
    </LinearLayout>


</LinearLayout>